# msft-czk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  msft-czk.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
specs/001-broker-tax-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-broker-tax-calculator/checklists/: requirements.md
specs/001-broker-tax-calculator/contracts/: cli.md
specs/002-dual-rate-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fidelity-rsu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-espp-discount-display/: plan.md  spec.md  tasks.md
specs/005-broker-source-labels/: plan.md  research.md  spec.md  tasks.md
specs/006-fidelity-espp-periodic/: plan.md  research.md  spec.md  tasks.md
specs/007-output-redesign/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-remove-deprecated-cli/: plan.md  spec.md  tasks.md
specs/009-optional-base-salary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-rename-project-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-add-pyright/: spec.md
specs/012-migrate-rich/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cz_tax_wizard/: cli.py  cnb.py  currency.py  models.py  reporter.py
src/msft_czk/: cli.py  cnb.py  models.py  reporter.py
tests/fixtures/: extract_fixtures.py
tests/integration/: test_fidelity_espp_periodic_full_run.py  test_fidelity_rsu_full_run.py  test_full_run.py
tests/unit/: test_cnb_daily.py  test_models.py  test_models_rsu.py  test_reporter.py
(+50 files in other folders)
