[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cz-tax-wizard"
version = "0.1.0"
description = "Czech personal income tax declaration toolkit for Microsoft employees"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "click>=8",
]

[project.scripts]
cz-tax-wizard = "cz_tax_wizard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real sample PDFs in tests/fixtures/pdfs/",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
