[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "msft-czk"
version = "1.0.0"
description = "Czech personal income tax declaration toolkit for Microsoft employees"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "click>=8",
    "rich>=14.0",
]

[project.scripts]
msft-czk = "msft_czk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "pyinstaller>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real sample PDFs in tests/fixtures/pdfs/",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyinstaller>=6",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "strict"
